[package]
name = "drivechain-c"
version = "0.1.0"
edition = "2021"

[features]
refund_amount_check = ["drivechain/refund_amount_check"]

[dependencies]
bitcoin = "0.29.1"
drivechain = { git = "https://github.com/nchashch/drivechain", rev = "db1c2e39d550ed6a6256f84e82899c3845d30ef0" }
hex = "0.4.3"
libc = "0.2.126"
ureq = { version = "2.4", features = ["json"] }

[build-dependencies]
cbindgen = "0.24"
